# Duh_Discord_Bot

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  req.txt  requirements.txt  run.sh  start.bat  start.sh  stop.sh  task
bot/: __init__.py  __main__.py
bot/cogs/: DISABLEDplaylist.py  __init__.py  help.py  minigames.py  miscellaneous.py  music.py  randomizer.py  temp_channels.py  weather.py
bot/services/: __init__.py  api_server.py  channel_service.py  get_lyrics.py  yt_source.py
bot/services/minigames/: __init__.py  chess.py  connect_four.py  tic_tac_toe.py
bot/utils/: config.py  logger.py
cogs/: music.py  temp_channel.py
discord-bot-mcp/: server.py
discord_bot/: main.py
discord_bot/cogs/: music.py  playlist.py  temp_channels.py
discord_bot/utils/: config.py  get_lyrics.py
discord_bot/utils/sources/: __init__.py  yt_source.py
utils/: yt_source.py
