[project]
name = "duh-discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "cairocffi>=1.7.1",
    "cairosvg>=2.8.2",
    "chess>=1.11.2",
    "colorama>=0.4.6",
    "discord-py>=2.6.3",
    "lyricsgenius>=3.7.2",
    "pillow>=11.3.0",
    "pynacl>=1.6.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "yt-dlp>=2025.9.5",
]
